Add an install target.